Fix adaptive Header

--- a/index.html
+++ b/index.html
@@ -94,17 +94,20 @@
                         </button>
 
                         <ul class="lang-select__list" id="lang-list" role="listbox" hidden>
-                            <li role="option" data-lang="EN" aria-selected="true" class="lang-select__option active">EN</li>
+                            <li role="option" data-lang="EN" aria-selected="true" class="lang-select__option active">EN
+                            </li>
                             <li role="option" data-lang="ES" class="lang-select__option">ES</li>
                             <li role="option" data-lang="FR" class="lang-select__option">FR</li>
                         </ul>
                     </div>
                 </div>
+
+                <!-- BURGER -->
+                <button class="burger" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <img src="assets/img/icons/menu.svg" alt="Mobile Menu" class="burger__icon" width="24"
+                        height="24" />
+                </button>
             </div>
-            <!-- BURGER -->
-            <button class="burger" aria-label="Open menu" aria-expanded="false" aria-controls="mobile-menu" hidden>
-                <img src="assets/img/icons/menu.svg" alt="Mobile Menu" class="burger__icon" width="24" height="24" />
-            </button>
         </div>
         <!-- MOBILE NAV OVERLAY -->
         <nav class="mobile-nav" id="mobile-menu" aria-label="Mobile navigation" hidden>
