--- a/index.html
+++ b/index.html
@@ -89,8 +89,14 @@
                     <div class="lang-select" aria-label="Language selector">
                         <button class="lang-select__toggle" aria-haspopup="listbox" aria-expanded="false"
                             aria-controls="lang-list">
-                            EN <img src="assets/img/icons/arrow-down.svg" width="24" height="24"
-                                class="lang-select__icon" alt="Lamguage More" aria-hidden="true">
+                            <span class="lang-select__value">EN</span>
+
+                            <!-- SVG icon -->
+                            <svg class="lang-select__icon" width="14" height="14" viewBox="0 0 24 24"
+                                aria-hidden="true">
+                                <path d="M6 9l6 6 6-6" fill="none" stroke="black" stroke-width="2"
+                                    stroke-linecap="round" stroke-linejoin="round"  />
+                            </svg>
                         </button>
 
                         <ul class="lang-select__list" id="lang-list" role="listbox" hidden>
@@ -98,6 +104,8 @@
                             </li>
                             <li role="option" data-lang="ES" class="lang-select__option">ES</li>
                             <li role="option" data-lang="FR" class="lang-select__option">FR</li>
+                            <li role="option" data-lang="UA" class="lang-select__option">UA</li>
+                            <li role="option" data-lang="IT" class="lang-select__option">IT</li>
                         </ul>
                     </div>
                 </div>
@@ -153,7 +161,7 @@
         </div>
     </footer>
     <!-- Scripts -->
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/components/select.js"></script>
 </body>
 
 </html>
