UPD Fix Optimization

--- a/index.html
+++ b/index.html
@@ -269,10 +269,10 @@
                     <p class="footer-social__label">Available On</p>
                     <div class="footer-social__inner--apps">
                         <a href="#" class="footer-social__store" aria-label="Get it on Google Play">
-                            <img src="assets/img/badges/google-play.svg" alt="Get it on Google Play">
+                            <img src="assets/img/badges/google-play.svg" width="130" height="40" alt="Get it on Google Play">
                         </a>
                         <a href="#" class="footer-social__store" aria-label="Download on the App Store">
-                            <img src="assets/img/badges/app-store.svg" alt="Download on the App Store">
+                            <img src="assets/img/badges/app-store.svg" width="130" height="40" alt="Download on the App Store">
                         </a>
                     </div>
                 </div>
